# MeshViewer

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  afterdoc_8h_source.html  annotated.html  autolink_8cpp.html  bug.html  camera.cpp  camera.h  camera_8h_source.html  classA-members.html  classA.html  classAfterdoc__Test-members.html  classAfterdoc__Test.html  classAutolink__Test-members.html  classAutolink__Test.html  classB-members.html  classB.html  classC-members.html  classC.html  classC1.html  classC2.html  classC3.html  classC4.html  classC5.html  classCamera-members.html  classCamera.html  classD-members.html  classD.html  classE-members.html  classE.html  classEnum__Test-members.html  classEnum__Test.html  classExample__Test-members.html  classExample__Test.html  classFn__Test-members.html  classFn__Test.html  classInclude__Test-members.html  (+138 more)
.github/workflows/: build.yml  doxygen-gh-pages.yml
ci/: Jenkinsfile
data/: MeshViewer.desktop
doc/html/: annotated.html  classCamera.html  classMainWindow-members.html  classMesh-members.html  classMesh.html  classMesh__coll__graph.md5  classOpenGLWidget-members.html  classOpenGLWidget.html  classOpenGLWidget__inherit__graph.map  edgeKeyHash_8h_source.html  files.html  functions.html  hierarchy.html  inherit_graph_3.map  inherit_graph_4.md5  mesh_8h_source.html  structEdgeKeyHash-members.html  structVertex-members.html  structVertex.html  triangle_8h_source.html  vertex_8h_source.html
doc/html/search/: all_0.js  functions_0.js  functions_4.js  searchdata.js
include/: camera.h  config.h  config.h.in  edgeKeyHash.h  mainwindow.h  mesh.h  openGLWidget.h  shaders.h  triangle.h  vertex.h
search/: all_0.js  all_1.js  all_12.js  all_13.js  all_15.js  all_3.js  all_4.js  all_5.js  all_7.js  all_c.js  all_d.js  all_e.js  classes_2.js  classes_4.js  classes_8.js  classes_9.js  classes_d.js  classes_e.js  functions_0.js  functions_2.js  functions_8.js  functions_c.js  functions_f.js  searchdata.js
shaders/: fragment.glsl  fragmentTex.glsl  vertex.glsl  vertexTex.glsl
src/: camera.cpp  edgeKeyHash.cpp  mainwindow.cpp  mainwindow.ui  mesh.cpp  openGLWidget.cpp  triangle.cpp  vertex.cpp
tests/: CMakeLists.txt  test_mesh.cpp
